Use dynawo repositories in release.yml + change version + use nightly as dyn-algo distrib without mpi
Signed-off-by: Dimitri Baron <dimitri.baron@rte-france.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ on:
         default: true
 
 env:
-  DYNAWO_VERSION: 1.7.0
+  DYNAWO_VERSION: 1.6.0
 
 jobs:
   distribution-cxx11:
@@ -44,8 +44,8 @@ jobs:
 
       - name: Fetch Dynawo and Dynawo-algorithms
         run: |
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo/releases/download/v$DYNAWO_VERSION/Dynawo_Linux_v$DYNAWO_VERSION.zip
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo-algorithms/releases/download/v$DYNAWO_VERSION/DynawoAlgorithms_Linux_headers_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo/releases/download/v$DYNAWO_VERSION/Dynawo_Linux_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/v$DYNAWO_VERSION/DynawoAlgorithms_Linux_headers_v$DYNAWO_VERSION.zip
 
       - name: Unzip Dynawo and Dynawo-algorithms
         run: |
@@ -71,7 +71,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository_owner }}/dynawo
+          repository: dynawo/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
           path: dynawo
@@ -105,8 +105,8 @@ jobs:
 
       - name: Fetch Dynawo and Dynawo Algorithms
         run: |
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo/releases/download/v$DYNAWO_VERSION/Dynawo_Linux_centos7_v$DYNAWO_VERSION.zip
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo-algorithms/releases/download/v$DYNAWO_VERSION/DynawoAlgorithms_Linux_headers_centos7_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo/releases/download/v$DYNAWO_VERSION/Dynawo_Linux_centos7_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/v$DYNAWO_VERSION/DynawoAlgorithms_Linux_headers_centos7_v$DYNAWO_VERSION.zip
 
       - name: Unzip Dynawo and Dynawo algorithms
         run: |
@@ -132,7 +132,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository_owner }}/dynawo
+          repository: dynawo/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
           path: dynawo
@@ -185,11 +185,11 @@ jobs:
       - name: Fetch Dynawo and Dynawo Algorithms
         shell: bash
         run: |
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo/releases/download/v$DYNAWO_VERSION/Dynawo_Windows_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo/releases/download/v$DYNAWO_VERSION/Dynawo_Windows_v$DYNAWO_VERSION.zip
           if [ "${{ matrix.use-mpi.value }}" == "YES" ]; then
-            curl -LOs https://github.com/${{ github.repository_owner }}/dynawo-algorithms/releases/download/v$DYNAWO_VERSION/DynawoAlgorithms_Windows_v$DYNAWO_VERSION.zip
+            curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/v$DYNAWO_VERSION/DynawoAlgorithms_Windows_v$DYNAWO_VERSION.zip
           else
-            curl -LOs https://github.com/${{ github.repository_owner }}/dynawo-algorithms/releases/download/v$DYNAWO_VERSION/DynawoAlgorithms_Windows_without_mpi_v$DYNAWO_VERSION.zip
+            curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_without_mpi_v1.7.0.zip
           fi
 
       - name: Unzip Dynawo
@@ -199,7 +199,7 @@ jobs:
           if "${{ matrix.use-mpi.value }}" == "YES" (
             7z x DynawoAlgorithms_Windows_v%DYNAWO_VERSION%.zip -o..\deploy
           ) else (
-            7z x DynawoAlgorithms_Windows_without_mpi_v%DYNAWO_VERSION%.zip -o..\deploy
+            7z x DynawoAlgorithms_Windows_without_mpi_v1.7.0.zip -o..\deploy
           )
 
       # use a minimal PATH to avoid too long command lines and conflict with Strawberry pkg-config !
@@ -234,7 +234,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository_owner }}/dynawo
+          repository: dynawo/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
           path: dynawo
