Patch pour faire des tests
Signed-off-by: Dimitri Baron <dimitri.baron@rte-france.com>

--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository_owner }}/dynawo
+          repository: dynawo/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
 
@@ -77,8 +77,8 @@ jobs:
 
       - name: Fetch Dynawo's and Dynawo-algorithms's nightly releases
         run: |
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo/releases/download/nightly/Dynawo_headers_v$DYNAWO_VERSION.zip
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_headers_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo/releases/download/nightly/Dynawo_headers_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_headers_v$DYNAWO_VERSION.zip
 
       - name: Unzip Dynawo and Dynawo-algorithms
         run: |
@@ -111,7 +111,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository_owner }}/dynawo
+          repository: dynawo/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
           path: dynawo
@@ -167,7 +167,7 @@ jobs:
 
       - name: Fetch Dynawo's nightly release
         shell: bash
-        run: curl -LOs https://github.com/${{ github.repository_owner }}/dynawo/releases/download/nightly/Dynawo_Windows_v$DYNAWO_VERSION.zip
+        run: curl -LOs https://github.com/dynawo/dynawo/releases/download/nightly/Dynawo_Windows_v$DYNAWO_VERSION.zip
 
       - name: Unzip Dynawo
         shell: cmd
@@ -181,9 +181,9 @@ jobs:
         shell: bash
         run: |
           if [ "${{ matrix.use-mpi.value }}" == "YES" ]; then
-            curl -LOs https://github.com/${{ github.repository_owner }}/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_v$DYNAWO_VERSION.zip
+            curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_v$DYNAWO_VERSION.zip
           else
-            curl -LOs https://github.com/${{ github.repository_owner }}/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_without_mpi_v$DYNAWO_VERSION.zip
+            curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_without_mpi_v$DYNAWO_VERSION.zip
           fi
 
       - name: Unzip Dynawo-algorithms
@@ -261,7 +261,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository_owner }}/dynawo
+          repository: dynawo/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
           path: dynawo
