--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,13 +44,13 @@ jobs:
 
       - name: Fetch Dynawo and Dynawo-algorithms
         run: |
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo/releases/download/v$DYNAWO_VERSION/Dynawo_Linux_v$DYNAWO_VERSION.zip
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo-algorithms/releases/download/v$DYNAWO_VERSION/DynawoAlgorithms_Linux_headers_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo/releases/download/nightly/Dynawo_headers_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_headers_v$DYNAWO_VERSION.zip
 
       - name: Unzip Dynawo and Dynawo-algorithms
         run: |
-          unzip -qq "Dynawo_Linux_v${DYNAWO_VERSION}.zip"
-          unzip -qq "DynawoAlgorithms_Linux_headers_v${DYNAWO_VERSION}.zip"
+          unzip -qq "Dynawo_headers_v${DYNAWO_VERSION}.zip"
+          unzip -qq "DynawoAlgorithms_headers_v${DYNAWO_VERSION}.zip"
 
       - name: Build
         uses: addnab/docker-run-action@v3
@@ -71,7 +71,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository_owner }}/dynawo
+          repository: dynawo/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
           path: dynawo
@@ -105,13 +105,13 @@ jobs:
 
       - name: Fetch Dynawo and Dynawo Algorithms
         run: |
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo/releases/download/v$DYNAWO_VERSION/Dynawo_Linux_centos7_v$DYNAWO_VERSION.zip
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo-algorithms/releases/download/v$DYNAWO_VERSION/DynawoAlgorithms_Linux_headers_centos7_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo/releases/download/nightly/Dynawo_headers_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_headers_v$DYNAWO_VERSION.zip
 
       - name: Unzip Dynawo and Dynawo algorithms
         run: |
-          unzip -qq "Dynawo_Linux_centos7_v${DYNAWO_VERSION}.zip"
-          unzip -qq "DynawoAlgorithms_Linux_headers_centos7_v${DYNAWO_VERSION}.zip"
+          unzip -qq "Dynawo_headers_v${DYNAWO_VERSION}.zip"
+          unzip -qq "DynawoAlgorithms_headers_v${DYNAWO_VERSION}.zip"
 
       - name: Build
         uses: addnab/docker-run-action@v3
@@ -132,7 +132,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository_owner }}/dynawo
+          repository: dynawo/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
           path: dynawo
@@ -185,11 +185,11 @@ jobs:
       - name: Fetch Dynawo and Dynawo Algorithms
         shell: bash
         run: |
-          curl -LOs https://github.com/${{ github.repository_owner }}/dynawo/releases/download/v$DYNAWO_VERSION/Dynawo_Windows_v$DYNAWO_VERSION.zip
+          curl -LOs https://github.com/dynawo/dynawo/releases/download/nightly/Dynawo_Windows_v$DYNAWO_VERSION.zip
           if [ "${{ matrix.use-mpi.value }}" == "YES" ]; then
-            curl -LOs https://github.com/${{ github.repository_owner }}/dynawo-algorithms/releases/download/v$DYNAWO_VERSION/DynawoAlgorithms_Windows_v$DYNAWO_VERSION.zip
+            curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_v$DYNAWO_VERSION.zip
           else
-            curl -LOs https://github.com/${{ github.repository_owner }}/dynawo-algorithms/releases/download/v$DYNAWO_VERSION/DynawoAlgorithms_Windows_without_mpi_v$DYNAWO_VERSION.zip
+            curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_without_mpi_v$DYNAWO_VERSION.zip
           fi
 
       - name: Unzip Dynawo
@@ -234,7 +234,7 @@ jobs:
       - name: Fetch release script
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository_owner }}/dynawo
+          repository: dynawo/dynawo
           sparse-checkout: .github/release.js
           sparse-checkout-cone-mode: false
           path: dynawo
