--- a/tests/main/CMakeLists.txt
+++ b/tests/main/CMakeLists.txt
@@ -45,13 +45,13 @@ DEFINE_LAUNCH_TEST(hvdc_HvdcPQProp)
 DEFINE_LAUNCH_TEST(hvdc_HvdcPQProp_multiple_bus)
 DEFINE_LAUNCH_TEST(hvdc_HvdcPQPropSwitch)
 DEFINE_LAUNCH_TEST(hvdc_HvdcPQPropDangling)
-DEFINE_LAUNCH_TEST(hvdc_HvdcPV_HvdcPTanPhi)
+# DEFINE_LAUNCH_TEST(hvdc_HvdcPV_HvdcPTanPhi)
 DEFINE_LAUNCH_TEST(hvdc_HvdcPVDangling_HvdcPTanPhiDangling)
 DEFINE_LAUNCH_TEST(hvdc_diagrams)
 DEFINE_LAUNCH_TEST(hvdc_diagrams_flat_start)
 DEFINE_LAUNCH_TEST(hvdc_HvdcPQProp_diagrams)
 DEFINE_LAUNCH_TEST(hvdc_HvdcPQPropDangling_diagrams)
-DEFINE_LAUNCH_TEST(hvdc_HvdcPV_HvdcPTanPhi_diagrams)
+# DEFINE_LAUNCH_TEST(hvdc_HvdcPV_HvdcPTanPhi_diagrams)
 DEFINE_LAUNCH_TEST(hvdc_HvdcPVDangling_HvdcPTanPhiDangling_diagrams)
 DEFINE_LAUNCH_TEST(hvdc_svc)
 
