--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -159,7 +159,7 @@ jobs:
           - { value: YES, text: 'with MPI' }
           - { value: NO, text: 'without MPI' }
     env:
-      DYNAWO_USE_MPI: ${{ matrix.use-mpi.value }}
+      DYNAWO_USE_MPI: YES
     steps:
       - name: No LF to CRLF conversion
         shell: cmd
@@ -169,14 +169,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download MS-MPI
-        if: ${{ matrix.use-mpi.value == 'YES' }}
         shell: bash
         run: |
           curl -Os https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisdk.msi
           curl -Os https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisetup.exe
 
       - name: Install MS-MPI
-        if: ${{ matrix.use-mpi.value == 'YES' }}
         shell: cmd
         run: |
           msmpisdk.msi /passive
@@ -186,36 +184,25 @@ jobs:
         shell: bash
         run: |
           curl -LOs https://github.com/dynawo/dynawo/releases/download/nightly/Dynawo_Windows_v$DYNAWO_VERSION.zip
-          if [ "${{ matrix.use-mpi.value }}" == "YES" ]; then
-            curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_v$DYNAWO_VERSION.zip
-          else
-            curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_without_mpi_v$DYNAWO_VERSION.zip
-          fi
+          curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_v$DYNAWO_VERSION.zip
 
       - name: Unzip Dynawo
         shell: cmd
         run: |
           7z x Dynawo_Windows_v%DYNAWO_VERSION%.zip -o..\deploy
-          if "${{ matrix.use-mpi.value }}" == "YES" (
-            7z x DynawoAlgorithms_Windows_v%DYNAWO_VERSION%.zip -o..\deploy
-          ) else (
-            7z x DynawoAlgorithms_Windows_without_mpi_v%DYNAWO_VERSION%.zip -o..\deploy
-          )
+          7z x DynawoAlgorithms_Windows_v%DYNAWO_VERSION%.zip -o..\deploy
 
       # use a minimal PATH to avoid too long command lines and conflict with Strawberry pkg-config !
       - name: Build and install
         shell: cmd
         env:
           PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
+          MSMPI_INC: C:\Program Files (x86)\Microsoft SDKs\MPI\Include\
+          MSMPI_LIB32: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\
+          MSMPI_LIB64: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\
+          MSMPI_BIN: C:\Program Files\Microsoft MPI\Bin\
         run: |
-          setlocal enableDelayedExpansion
-          if "${{ matrix.use-mpi.value }}" == "YES" (
-            set "MSMPI_INC=C:\Program Files (x86)\Microsoft SDKs\MPI\Include\"
-            set "MSMPI_LIB32: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\"
-            set "MSMPI_LIB64: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\"
-            set "MSMPI_BIN: C:\Program Files\Microsoft MPI\Bin\"
-            set "PATH=!MSMPI_BIN!;%PATH%"
-          )
+          set PATH=%MSMPI_BIN%;%PATH%
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           call scripts\dynaflow-launcher verbose build || exit /b 1
 
