--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -151,8 +151,15 @@ jobs:
 
   distribution-windows:
     if: github.event_name != 'workflow_dispatch' || inputs.perform-windows
-    name: Distribution Windows
+    name: Distribution Windows (${{ matrix.use-mpi.text }})
     runs-on: windows-2019
+    strategy:
+      matrix:
+        use-mpi:
+          - { value: YES, text: 'with MPI' }
+          - { value: NO, text: 'without MPI' }
+    env:
+      DYNAWO_USE_MPI: YES
     steps:
       - name: No LF to CRLF conversion
         shell: cmd
@@ -189,13 +196,16 @@ jobs:
       - name: Build and install
         shell: cmd
         env:
-          MSMPI_INC: C:\Program Files (x86)\Microsoft SDKs\MPI\Include\
-          MSMPI_LIB32: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\
-          MSMPI_LIB64: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\
-          MSMPI_BIN: C:\Program Files\Microsoft MPI\Bin\
           PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
         run: |
-          set PATH=%MSMPI_BIN%;%PATH%
+          setlocal enableDelayedExpansion
+          if "${{ matrix.use-mpi.value }}" == "YES" (
+            set "MSMPI_INC=C:\Program Files (x86)\Microsoft SDKs\MPI\Include\"
+            set "MSMPI_LIB32: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\"
+            set "MSMPI_LIB64: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\"
+            set "MSMPI_BIN: C:\Program Files\Microsoft MPI\Bin\"
+            set "PATH=!MSMPI_BIN!;%PATH%"
+          )
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           call scripts\dynaflow-launcher verbose build || exit /b 1
 
@@ -205,7 +215,11 @@ jobs:
           md distrib
           cd distrib
           move /y ..\..\dfl-i dynaflow-launcher
-          7z a DynaFlowLauncher_Windows_v%DYNAWO_VERSION%.zip dynaflow-launcher
+          if "${{ matrix.use-mpi.value }}" == "YES" (
+            7z a DynaFlowLauncher_Windows_v%DYNAWO_VERSION%.zip dynaflow-launcher
+          ) else (
+            7z a DynaFlowLauncher_Windows_without_mpi_v%DYNAWO_VERSION%.zip dynaflow-launcher
+          )
 
       - name: Fetch release script
         uses: actions/checkout@v4
