--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -151,8 +151,15 @@ jobs:
 
   distribution-windows:
     if: github.event_name != 'workflow_dispatch' || inputs.perform-windows
-    name: Distribution Windows
+    name: Distribution Windows (${{ matrix.use-mpi.text }})
     runs-on: windows-2019
+    strategy:
+      matrix:
+        use-mpi:
+          - { value: YES, text: 'with MPI' }
+          - { value: NO, text: 'without MPI' }
+    env:
+      DYNAWO_USE_MPI: YES
     steps:
       - name: No LF to CRLF conversion
         shell: cmd
@@ -177,22 +184,26 @@ jobs:
         shell: bash
         run: |
           curl -LOs https://github.com/dynawo/dynawo/releases/download/nightly/Dynawo_Windows_v$DYNAWO_VERSION.zip
-          curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_v$DYNAWO_VERSION.zip
+          if [ "${{ matrix.use-mpi.value }}" == "YES" ]; then
+            curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_v$DYNAWO_VERSION.zip
+          else
+            curl -LOs https://github.com/dynawo/dynawo-algorithms/releases/download/nightly/DynawoAlgorithms_Windows_v$DYNAWO_VERSION.zip
+          fi
 
       - name: Unzip Dynawo
         shell: cmd
         run: |
           7z x Dynawo_Windows_v%DYNAWO_VERSION%.zip -o..\deploy
-          7z x DynawoAlgorithms_Windows_v%DYNAWO_VERSION%.zip -o..\deploy
+          if "${{ matrix.use-mpi.value }}" == "YES" (
+            7z x DynawoAlgorithms_Windows_v%DYNAWO_VERSION%.zip -o..\deploy
+          ) else (
+            7z x DynawoAlgorithms_Windows_v%DYNAWO_VERSION%.zip -o..\deploy
+          )
 
       # use a minimal PATH to avoid too long command lines and conflict with Strawberry pkg-config !
       - name: Build and install
         shell: cmd
         env:
-          MSMPI_INC: C:\Program Files (x86)\Microsoft SDKs\MPI\Include\
-          MSMPI_LIB32: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\
-          MSMPI_LIB64: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\
-          MSMPI_BIN: C:\Program Files\Microsoft MPI\Bin\
           PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
         run: |
           set PATH=%MSMPI_BIN%;%PATH%
@@ -205,7 +216,11 @@ jobs:
           md distrib
           cd distrib
           move /y ..\..\dfl-i dynaflow-launcher
-          7z a DynaFlowLauncher_Windows_v%DYNAWO_VERSION%.zip dynaflow-launcher
+          if "${{ matrix.use-mpi.value }}" == "YES" (
+            7z a DynaFlowLauncher_Windows_v%DYNAWO_VERSION%.zip dynaflow-launcher
+          ) else (
+            7z a DynaFlowLauncher_Windows_without_mpi_v%DYNAWO_VERSION%.zip dynaflow-launcher
+          )
 
       - name: Fetch release script
         uses: actions/checkout@v4
