--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -151,8 +151,15 @@ jobs:
 
   distribution-windows:
     if: github.event_name != 'workflow_dispatch' || inputs.perform-windows
-    name: Distribution Windows
+    name: Distribution Windows (${{ matrix.use-mpi.text }})
     runs-on: windows-2019
+    strategy:
+      matrix:
+        use-mpi:
+          - { value: YES, text: 'with MPI' }
+          - { value: NO, text: 'without MPI' }
+    env:
+      DYNAWO_USE_MPI: YES
     steps:
       - name: No LF to CRLF conversion
         shell: cmd
@@ -162,12 +169,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download MS-MPI
+        if: ${{ matrix.use-mpi.value == 'YES' }}
         shell: bash
         run: |
           curl -Os https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisdk.msi
           curl -Os https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisetup.exe
 
       - name: Install MS-MPI
+        if: ${{ matrix.use-mpi.value == 'YES' }}
         shell: cmd
         run: |
           msmpisdk.msi /passive
@@ -189,11 +198,11 @@ jobs:
       - name: Build and install
         shell: cmd
         env:
+          PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
           MSMPI_INC: C:\Program Files (x86)\Microsoft SDKs\MPI\Include\
           MSMPI_LIB32: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\
           MSMPI_LIB64: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\
           MSMPI_BIN: C:\Program Files\Microsoft MPI\Bin\
-          PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
         run: |
           set PATH=%MSMPI_BIN%;%PATH%
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
@@ -205,7 +214,11 @@ jobs:
           md distrib
           cd distrib
           move /y ..\..\dfl-i dynaflow-launcher
-          7z a DynaFlowLauncher_Windows_v%DYNAWO_VERSION%.zip dynaflow-launcher
+          if "${{ matrix.use-mpi.value }}" == "YES" (
+            7z a DynaFlowLauncher_Windows_v%DYNAWO_VERSION%.zip dynaflow-launcher
+          ) else (
+            7z a DynaFlowLauncher_Windows_without_mpi_v%DYNAWO_VERSION%.zip dynaflow-launcher
+          )
 
       - name: Fetch release script
         uses: actions/checkout@v4
