--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -157,9 +157,9 @@ jobs:
       matrix:
         use-mpi:
           - { value: YES, text: 'with MPI' }
-          - { value: NO, text: 'without MPI' }
+          - { value: YES, text: 'without MPI' }
     env:
-      DYNAWO_USE_MPI: YES
+      DYNAWO_USE_MPI: ${{ matrix.use-mpi.value }}
     steps:
       - name: No LF to CRLF conversion
         shell: cmd
@@ -169,12 +169,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download MS-MPI
+        if: ${{ matrix.use-mpi.value == 'YES' }}
         shell: bash
         run: |
           curl -Os https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisdk.msi
           curl -Os https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisetup.exe
 
       - name: Install MS-MPI
+        if: ${{ matrix.use-mpi.value == 'YES' }}
         shell: cmd
         run: |
           msmpisdk.msi /passive
@@ -197,12 +199,20 @@ jobs:
         shell: cmd
         env:
           PATH: C:\Windows\system32;C:\Program Files\Git\cmd;C:\hostedtoolcache\windows\Python\3.7.9\x64
-          MSMPI_INC: C:\Program Files (x86)\Microsoft SDKs\MPI\Include\
-          MSMPI_LIB32: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\
-          MSMPI_LIB64: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\
-          MSMPI_BIN: C:\Program Files\Microsoft MPI\Bin\
         run: |
-          set PATH=%MSMPI_BIN%;%PATH%
+          setlocal enableDelayedExpansion
+          if "${{ matrix.use-mpi.value }}" == "YES" (
+            set "MSMPI_INC=C:\Program Files (x86)\Microsoft SDKs\MPI\Include\"
+            set "MSMPI_LIB32: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x86\"
+            set "MSMPI_LIB64: C:\Program Files (x86)\Microsoft SDKs\MPI\Lib\x64\"
+            set "MSMPI_BIN: C:\Program Files\Microsoft MPI\Bin\"
+            set "PATH=!MSMPI_BIN!;%PATH%"
+          )
+          echo MSMPI_INC = %MSMPI_INC%
+          echo MSMPI_LIB32 = %MSMPI_LIB32%
+          echo MSMPI_LIB64 = %MSMPI_LIB64%
+          echo MSMPI_BIN = %MSMPI_BIN%
+          echo PATH = %PATH%
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           call scripts\dynaflow-launcher verbose build || exit /b 1
 
